# kevin_work

./: README.md
appsrc_example_1.10.0/appsrc-sender/: meson.build
appsrc_example_1.10.0/appsrc-sender/src/: meson.build
gstrawcapturebypass/: detection_rawcapture.sh  element생성빌드옵션.txt  gstrawcapturebypass.c_  kevin_nv12_detection.raw  nv12_to_ppm  nv12_to_ppm.c
gstreamer_aging_test_1.10.0/: meson.build
gstreamer_aging_test_1.10.0/cross/: aarch64-poky.txt
gstreamer_aging_test_1.10.0/log/: log_command.txt
gstreamer_aging_test_1.10.0/src/: encoder_config_aging.json  frontend_config_aging.json  frontend_config_aging_denoise.json  gst_cycle  gst_cycle.cpp  gst_cycle_onoff.cpp
hailo-media-library_1.10.0/: readme.txt
hailo-media-library_1.10.0/api/examples/internal/: gst_cycle.cpp  medialib_gst_runner.cpp
hailo-media-library_1.10.0/executables/: meson.build
hailo-sdk191/gstreamer_aging_test/: gst_cycle  gst_cycle.cpp  mem_watch.sh
hailo-sdk191/gstreamer_aging_test/src/: gst_cycle.cpp  meson.build
